--- a/src/main/resources/swe/views/test.fxml
+++ b/src/main/resources/swe/views/test.fxml
@@ -12,6 +12,9 @@
             prefHeight="400.0" prefWidth="600.0">
     <top>
         <MenuBar fx:id="menuBar">
+            <Menu text="Mode">
+                <MenuItem text="Exit" fx:id="exitItem" onAction="#exit"/>
+            </Menu>
             <Menu text="Help">
                 <MenuItem text="About"/>
             </Menu>
