Completed some UIs

--- a/src/main/resources/swe/views/root.fxml
+++ b/src/main/resources/swe/views/root.fxml
@@ -23,7 +23,7 @@
 
 
     <center>
-        <fx:include source="login.fxml"/>
+        <fx:include source="existingCustomer.fxml"/>
     </center>
 
 </BorderPane>
