Started linking some UIs together

--- a/src/main/resources/swe/views/login.fxml
+++ b/src/main/resources/swe/views/login.fxml
@@ -24,10 +24,10 @@
          </rowConstraints>
          <children>
             <Label text="Username" GridPane.halignment="LEFT" />
-            <TextField prefHeight="25.0" prefWidth="199.0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+            <TextField prefHeight="25.0" prefWidth="199.0" GridPane.columnSpan="2" GridPane.rowIndex="1" fx:id="userNameField"/>
             <Label text="Password" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-            <PasswordField GridPane.columnSpan="2" GridPane.rowIndex="3" />
-            <Button mnemonicParsing="false" text="Submit" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+            <PasswordField GridPane.columnSpan="2" GridPane.rowIndex="3" onAction="#submit" fx:id="passwordField"/>
+            <Button mnemonicParsing="false" text="Submit" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" onAction="#submit"/>
             <!-- <a href="https://www.freepik.com/free-photos-vectors/logo">Logo vector created by freepik - www.freepik.com</a> !-->
          </children>
       </GridPane>
