--- a/src/main/resources/swe/views/ReceiptPreview.fxml
+++ b/src/main/resources/swe/views/ReceiptPreview.fxml
@@ -3,6 +3,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe.controllers.ReceiptPreviewController">
-      <Label alignment="TOP_CENTER" text="Receipt Preview"/>
-</VBox>
+
+<GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe.controllers.ReceiptPreviewController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+   </rowConstraints>
+   <children>
+      <Label alignment="TOP_LEFT" text="Order(s):" />
+      <VBox prefHeight="400.0" prefWidth="600.0" GridPane.rowIndex="1" />
+      <Label text="Total: " GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+   </children>
+</GridPane>
