--- a/src/main/resources/swe/views/newCustomer.fxml
+++ b/src/main/resources/swe/views/newCustomer.fxml
@@ -28,7 +28,7 @@
       <TextField GridPane.columnSpan="2" GridPane.rowIndex="5" fx:id="customerPhoneNumber"/>
       <Label text="Payment Method" GridPane.rowIndex="6" />
       <TextField GridPane.columnSpan="2" GridPane.rowIndex="7" fx:id="customerPaymentMethod"/>
-      <Button mnemonicParsing="false" text="New Customer" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
+      <Button mnemonicParsing="false" text="New Customer" GridPane.halignment="RIGHT" GridPane.rowIndex="8" onAction="#newCustomerButton"/>
       <Button mnemonicParsing="false" text="Existing Customer" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="8" onAction="#existingCustomerButton"/>
    </children>
 </GridPane>
