--- a/src/main/resources/swe/views/login.fxml
+++ b/src/main/resources/swe/views/login.fxml
@@ -21,13 +21,15 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
             <Label text="Username" GridPane.halignment="LEFT" />
-            <TextField prefHeight="25.0" prefWidth="199.0" GridPane.columnSpan="2" GridPane.rowIndex="1" fx:id="userNameField"/>
+            <TextField fx:id="userNameField" prefHeight="25.0" prefWidth="199.0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
             <Label text="Password" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-            <PasswordField GridPane.columnSpan="2" GridPane.rowIndex="3" onAction="#submit" fx:id="passwordField"/>
-            <Button mnemonicParsing="false" text="Submit" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" onAction="#submit"/>
+            <PasswordField fx:id="passwordField" onAction="#submit" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <Button mnemonicParsing="false" onAction="#submit" text="Submit" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+            <Hyperlink text="Logo vector created by freepik - www.freepik.com" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <!-- <a href="https://www.freepik.com/free-photos-vectors/logo">Logo vector created by freepik - www.freepik.com</a> !-->
          </children>
       </GridPane>
