--- a/src/main/resources/swe/views/orderScreen3.fxml
+++ b/src/main/resources/swe/views/orderScreen3.fxml
@@ -18,7 +18,7 @@
    <children>
       <Label alignment="CENTER" text="Payment Select" GridPane.columnSpan="2" GridPane.halignment="CENTER" />
       <Button fx:id="debitCreditButton" mnemonicParsing="false" text="Debit/Credit" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" onAction="#creditDebit"/>
-      <Button fx:id="cashButton" mnemonicParsing="false" text="Cash" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      <Button fx:id="cashButton" mnemonicParsing="false" text="Cash" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" onAction="#cash"/>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
          <children>
             <Button mnemonicParsing="false" text="Add Item">
