--- a/src/main/resources/swe/views/ReceiptPreview.fxml
+++ b/src/main/resources/swe/views/ReceiptPreview.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe.controllers.ReceiptPreviewController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -15,7 +14,8 @@
    </rowConstraints>
    <children>
       <Label alignment="TOP_LEFT" text="Order(s):" />
-      <VBox prefHeight="400.0" prefWidth="600.0" GridPane.rowIndex="1" fx:id="vBox"/>
-      <Label text="Total: " GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+      <VBox fx:id="vBox" nodeOrientation="LEFT_TO_RIGHT" prefHeight="400.0" prefWidth="600.0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+      </VBox>
+      <Label fx:id="total" text="Total: " GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
    </children>
 </GridPane>
