--- a/src/main/resources/swe/views/creditDebitScreen.fxml
+++ b/src/main/resources/swe/views/creditDebitScreen.fxml
@@ -25,14 +25,14 @@
       <Label text="Expiration Date" GridPane.rowIndex="4" />
       <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="5">
          <children>
-            <Label alignment="CENTER" text="M:" />
-            <TextField prefHeight="25.0" prefWidth="60.0" />
+            <Label alignment="CENTER" text="M:" labelFor="$monthField"/>
+            <TextField prefHeight="25.0" prefWidth="60.0" fx:id="monthField"/>
          </children>
       </HBox>
       <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
          <children>
-            <Label text="D:" />
-            <TextField prefHeight="25.0" prefWidth="60.0" />
+            <Label text="Y:" labelFor="$yearField"/>
+            <TextField prefHeight="25.0" prefWidth="60.0" fx:id="yearField"/>
          </children>
       </HBox>
       <Button mnemonicParsing="false" text="Confirm" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" onAction="#confirm"/>
