--- a/src/main/resources/swe/views/orderScreen1.fxml
+++ b/src/main/resources/swe/views/orderScreen1.fxml
@@ -22,7 +22,7 @@
    </rowConstraints>
    <columnConstraints>
       <ColumnConstraints minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints minWidth="10.0" percentWidth="15.0" prefWidth="100.0" />
       <ColumnConstraints minWidth="10.0" percentWidth="15.0" prefWidth="100.0" />
    </columnConstraints>
    <children>
@@ -37,10 +37,10 @@
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
             <Label text="Size" />
-            <RadioButton mnemonicParsing="false" text="Small" toggleGroup="$sizeToggleGroup"/>
-            <RadioButton mnemonicParsing="false" text="Medium" toggleGroup="$sizeToggleGroup"/>
-            <RadioButton mnemonicParsing="false" text="Large" toggleGroup="$sizeToggleGroup"/>
-            <RadioButton mnemonicParsing="false" text="X-Large" toggleGroup="$sizeToggleGroup"/>
+            <RadioButton mnemonicParsing="false" text="Small ($10.00)" toggleGroup="$sizeToggleGroup"/>
+            <RadioButton mnemonicParsing="false" text="Medium ($14.00)" toggleGroup="$sizeToggleGroup"/>
+            <RadioButton mnemonicParsing="false" text="Large ($18.00)" toggleGroup="$sizeToggleGroup"/>
+            <RadioButton mnemonicParsing="false" text="X-Large ($22.00)" toggleGroup="$sizeToggleGroup"/>
          </children>
       </VBox>
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -55,10 +55,10 @@
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="4">
          <children>
             <Label text="Other Items" />
-            <CheckBox mnemonicParsing="false" text="S Fountain Drink" onAction="#small" fx:id="smallCheckBox"/>
-            <CheckBox mnemonicParsing="false" text="M Fountain Drink" onAction="#medium" fx:id="mediumCheckBox"/>
-            <CheckBox mnemonicParsing="false" text="L Fountain Drink" onAction="#large" fx:id="largeCheckBox"/>
-            <CheckBox mnemonicParsing="false" text="Cookie" />
+            <CheckBox mnemonicParsing="false" text="S Fountain Drink ($1.00)" onAction="#small" fx:id="smallCheckBox"/>
+            <CheckBox mnemonicParsing="false" text="M Fountain Drink ($1.50)" onAction="#medium" fx:id="mediumCheckBox"/>
+            <CheckBox mnemonicParsing="false" text="L Fountain Drink ($2.00)" onAction="#large" fx:id="largeCheckBox"/>
+            <CheckBox mnemonicParsing="false" text="Cookie ($2.00)" />
          </children>
       </VBox>
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="drinkBox">
