--- a/src/main/resources/swe/views/existingCustomer.fxml
+++ b/src/main/resources/swe/views/existingCustomer.fxml
@@ -18,9 +18,9 @@
       <ColumnConstraints minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
    </columnConstraints>
    <children>
-      <Label text="Phone Number" />
-      <TextField GridPane.columnSpan="2" GridPane.rowIndex="1" />
-      <Button mnemonicParsing="false" text="Search" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+      <Label text="Phone Number"/>
+      <TextField GridPane.columnSpan="2" GridPane.rowIndex="1" fx:id="searchField"/>
+      <Button mnemonicParsing="false" text="Search" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" onAction="#search"/>
       <TableView fx:id="table" prefHeight="122.0" prefWidth="305.0" GridPane.columnSpan="2" GridPane.rowIndex="3">
         <columns>
           <TableColumn prefWidth="75.0" text="Customer #">
