--- a/src/main/resources/swe/views/receiptPreview.fxml
+++ b/src/main/resources/swe/views/receiptPreview.fxml
@@ -13,7 +13,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <Label alignment="TOP_LEFT" text="Order(s):" />
+      <Label alignment="TOP_LEFT" text="Order(s):" fx:id="orderTitle"/>
       <VBox fx:id="vBox" nodeOrientation="LEFT_TO_RIGHT" prefHeight="400.0" prefWidth="600.0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
       </VBox>
       <Label fx:id="total" text="Total: " GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
