--- a/src/main/resources/swe/views/endCheckoutScreen.fxml
+++ b/src/main/resources/swe/views/endCheckoutScreen.fxml
@@ -3,8 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="CENTER" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe.controllers.EndCheckoutScreenController" fx:id="gridPane">
+<GridPane fx:id="gridPane" alignment="CENTER" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe.controllers.EndCheckoutScreenController">
    <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" percentHeight="80.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
    </rowConstraints>
@@ -13,7 +14,8 @@
       <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
    </columnConstraints>
    <children>
-      <Button fx:id="receiptButton" mnemonicParsing="false" text="Print Receipt" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-      <Button fx:id="exitButton" mnemonicParsing="false" text="Exit" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+      <Label text="Receipt" GridPane.columnSpan="2" GridPane.halignment="CENTER" />
+      <Button fx:id="receiptButton" mnemonicParsing="false" text="Print Receipt" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+      <Button fx:id="exitButton" mnemonicParsing="false" text="Exit" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
    </children>
 </GridPane>
