--- a/src/main/resources/swe/views/orderScreen3.fxml
+++ b/src/main/resources/swe/views/orderScreen3.fxml
@@ -21,13 +21,13 @@
       <Button fx:id="cashButton" mnemonicParsing="false" text="Cash" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" onAction="#cash"/>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
          <children>
-            <Button mnemonicParsing="false" text="Add Item">
+            <Button mnemonicParsing="false" text="Add Item" onAction="#addItem">
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Edit Item" />
-            <Button mnemonicParsing="false" text="Remove">
+            <Button mnemonicParsing="false" text="Edit Item" onAction="#editItem"/>
+            <Button mnemonicParsing="false" text="Remove" onAction="#removeItem">
                <HBox.margin>
                   <Insets left="5.0" />
                </HBox.margin>
